--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-faq-component": "^1.3.1",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.1.0",
     "sass": "^1.43.4",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.0.1",
